namespace CommandPattern;

public class Barbecuer
{
    public void BakeMutton()
    {
        Console.WriteLine("烤羊肉串");
    }

    public void BakeChickenWing()
    {
        Console.WriteLine("烤鸡翅");
    }
}
